[project]
name = "resume-builder"
version = "0.1.0"
description = "A professional resume builder application with multiple templates and customization options"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.0.0",
    "pandas>=1.3.0",
    "Pillow>=8.0.0",
    "fpdf2>=2.4.0",
    "python-base64>=1.0.0"
]
